--- a/style/mail.css
+++ b/style/mail.css
@@ -54,3 +54,12 @@ form {
     resize: none;
     background-color: #ffffff99;
 }
+input[type=button]{
+    background-color: #04AA6D;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
